# MedusaStore

./: .dockerignore  .env.example  .env.prod.example  .env.staging.example  .gitignore  AGENTS.md  INDEPENDENT_TECHNICAL_AUDIT.md  LICENSE  README.md  StichDesign.MD  docker-compose.prod.yml  docker-compose.yml  it_services_portfolio.md  openapi_auth.yaml  package.json
ai-assistant/: .gitignore  API_CONTRACT.md  ARCHITECTURE.md  DATA_MODEL.md  Dockerfile  ENV.example  GITHUB_RESEARCH.md  IMPLEMENTATION_CHECKLIST.md  MEDUSA_INTEGRATION.md  README.md  ROADMAP.md  SPEC.md  STOREFRONT_WIDGET.md  docker-compose.ai.yml  e2e-checklist.md  pyproject.toml
ai-assistant/backend/app/: main.py  medusa.py
ai-assistant/backend/tests/: conftest.py  fakes.py  test_chat_api.py  test_handoff_telegram.py  test_handoff_vk.py  test_ingestion.py  test_integration_regressions.py  test_live_commerce_tools.py  test_medusa_client.py  test_medusa_products.py  test_phase3_chat.py  test_phase4_vector.py  test_phase6_hardening.py  test_repository.py  test_session_binding_and_reindex_queue.py  test_streaming.py  test_telegram_handoff_admin.py  (+3 more)
ai-assistant/docs/: MEDUSA_ADAPTER_PHASE5.md  OPERATIONAL_RUNBOOKS.md  PRODUCTION_DEPLOYMENT.md
ai-assistant/evaluation/: dataset.jsonl
ai-assistant/integration-plan/: MEDUSA_BACKEND_COPY_MAP.md  PRODUCTION_LAUNCH_BLOCKERS.md  README.md  STOREFRONT_WIDGET_COPY_MAP.md
ai-assistant/medusa-adapter/: README.md  package.json
ai-assistant/migrations/: 001_initial_schema.sql
ai-assistant/scripts/: eval_dataset.py  replay_session.py  smoke_assistant.py
(+937 files in other folders)
