[project]
name = "medusa-ai-assistant"
version = "0.1.0"
description = "FastAPI backend skeleton for the Medusa AI shopping assistant"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.109.0",
  "uvicorn>=0.27.0",
  "pydantic>=2.6.0",
  "pydantic-settings>=2.1.0",
  "asyncpg>=0.29.0",
  "python-multipart>=0.0.6",
  "PyYAML>=6.0.1",
  "httpx>=0.26.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]
pythonpath = ["backend"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
